* Updates to product ingestions:
  - AEOLUS L1B: fixed ingestion of Mie/measurement data; added sensor angles
  - AEOLUS L2B: fixed ingestion of Mie data; added sensor angles
  - ECMWF GRIB: fixed unit of backscatter coefficient 1/(milli sr) -> 1/(m sr)
  - GHG CCI: added support for TROPOMI WFMD L2
  - QA4ECV HCHO: add amf=clear_sky ingestion option
  - S5P L2 HCHO: renamed cloud_altitude variable to cloud_height

1.13 2021-03-12
~~~~~~~~~~~~~~~

* Added rebin() operation.

* Added harp_product_rebin_with_axis_bounds_variable() function.

* Added support for datetime_bounds variable.

* Fixed issue in =& operation (it returned true if any of the bits were 1
  instead of all bits).

* Updates to product ingestions:
  - GEOMS: renamed all site_name variables to location_name
  - GEOMS FTIR H2CO: fixed issue in determining unit for H2O data (that would
    fail the ingestion)
  - S5P L2 CO: added co=corrected ingestion option
  - SCIAMACHY L2: fixed averaging of cloud fraction for co-added pixels

1.12 2020-10-29
~~~~~~~~~~~~~~~

* The csv output of 'harpdump --dataset' can now be used as content of a .pth
  file. This improves the performance of harpcollocate/harpmerge/etc. as they
  no longer need to open and extract metadata from files themselves anymore.

* harpcollocate now stores differences as signed values in collocation result
  file (instead of absolute differences).

* Added harp_dataset_prefilter(). This function is now also called within
  harpmerge and harpcollocate to pre-filter the input dataset(s) for datetime
  and collocate left/right filters that are at the start of the operations
  string.

* Added format and history fields to harp_product_metadata.

* Added harp.import_product_metadata() to Python interface.

* harp_dataset_add_product() now ignores files/directories starting with '.'.

* Added uncertainty propagation to bin() and bin_spatial() operations
  (using uncorrelated assumption for bin() and correlated for bin_spatial()).
