@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="GEOMS" last-modified="2020-02-06">
+<cd:ProductClass xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" name="GEOMS" last-modified="2021-06-11">
   <cd:Description>Products using the Generic Earth Observation Metadata Standard (GEOMS)</cd:Description>
   <!-- version numbers are a combination of base format and template version: <format> + <version>
        format: hdf4=1000, hdf5=2000, netcdf3=3000 (netcdf4 is treated as hdf5) -->
@@ -191,6 +191,12 @@
         <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-DIRECTSUN-GAS-007"</cd:MatchExpression>
       </cd:DetectionRule>
     </cd:ProductDefinition>
+    <cd:ProductDefinition id="UVVIS_DOAS_DIRECTSUN_GAS_007_hdf5" format="hdf5" version="2007">
+      <cd:Description>The format definition for this product is taken from the HDF5 file itself.</cd:Description>
+      <cd:DetectionRule>
+        <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-DIRECTSUN-GAS-007"</cd:MatchExpression>
+      </cd:DetectionRule>
+    </cd:ProductDefinition>
   </cd:ProductType>
   <cd:ProductType name="UVVIS_DOAS_OFFAXIS_GAS">
     <cd:Description>GEOMS template for UVVIS-DOAS MAXDOAS gas measurements</cd:Description>
@@ -208,6 +214,12 @@
     </cd:ProductDefinition>
     <cd:ProductDefinition id="UVVIS_DOAS_OFFAXIS_GAS_007_hdf4" format="hdf4" version="1007">
       <cd:Description>The format definition for this product is taken from the HDF4 file itself.</cd:Description>
+      <cd:DetectionRule>
+        <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-OFFAXIS-GAS-007"</cd:MatchExpression>
+      </cd:DetectionRule>
+    </cd:ProductDefinition>
+    <cd:ProductDefinition id="UVVIS_DOAS_OFFAXIS_GAS_007_hdf5" format="hdf5" version="2007">
+      <cd:Description>The format definition for this product is taken from the HDF5 file itself.</cd:Description>
       <cd:DetectionRule>
         <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-OFFAXIS-GAS-007"</cd:MatchExpression>
       </cd:DetectionRule>
@@ -233,6 +245,12 @@
         <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-ZENITH-GAS-007"</cd:MatchExpression>
       </cd:DetectionRule>
     </cd:ProductDefinition>
+    <cd:ProductDefinition id="UVVIS_DOAS_ZENITH_GAS_007_hdf5" format="hdf5" version="2007">
+      <cd:Description>The format definition for this product is taken from the HDF5 file itself.</cd:Description>
+      <cd:DetectionRule>
+        <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-ZENITH-GAS-007"</cd:MatchExpression>
+      </cd:DetectionRule>
+    </cd:ProductDefinition>
   </cd:ProductType>
   <cd:ProductType name="UVVIS_DOAS_OFFAXIS_AEROSOL">
     <cd:Description>GEOMS template for UVVIS-DOAS MAXDOAS tropospheric aerosol measurements</cd:Description>
@@ -250,6 +268,12 @@
     </cd:ProductDefinition>
     <cd:ProductDefinition id="UVVIS_DOAS_OFFAXIS_AEROSOL_007_hdf4" format="hdf4" version="1007">
       <cd:Description>The format definition for this product is taken from the HDF4 file itself.</cd:Description>
+      <cd:DetectionRule>
+        <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-OFFAXIS-AEROSOL-007"</cd:MatchExpression>
+      </cd:DetectionRule>
+    </cd:ProductDefinition>
+    <cd:ProductDefinition id="UVVIS_DOAS_OFFAXIS_AEROSOL_007_hdf5" format="hdf5" version="2007">
+      <cd:Description>The format definition for this product is taken from the HDF5 file itself.</cd:Description>
       <cd:DetectionRule>
         <cd:MatchExpression path="/@DATA_TEMPLATE">str(.) == "GEOMS-TE-UVVIS-DOAS-OFFAXIS-AEROSOL-007"</cd:MatchExpression>
       </cd:DetectionRule>
