@@ -1,0 +1,3 @@
+<?xml version="1.0"?>
+<cd:ProductDefinition xmlns:cd="http://www.stcorp.nl/coda/definition/2008/07" id="UVVIS_DOAS_ZENITH_GAS_007_hdf5" format="hdf5" last-modified="2021-06-11">
+</cd:ProductDefinition>
